--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "eslint-plugin-import": "^2.22.1",
     "webpack": "^5.9.0",
     "webpack-cli": "^4.2.0"
+  },
+  "dependencies": {
+    "country-code-lookup": "0.0.18"
   }
 }
